# Home_Works_C

./: CMakeLists.txt
Home Work 01/: arithmetic operations.c
Home Work 03/: square.c
Home Work 05/: evil.c
Home Work 06/: arrays.c
Home Work 07/: static arrays.c
Home Work 08/: dynamic arrays.c  while not 0.c
Home Work 09/: Find_and_Remove.c  Triangle_Pascale.c  concatenate.c  dynamicArray.c
Home Work 1/: Hello, Word!.c  Lucky tickets.c  fizz buzz.c  prime numbers.c  simple.c  square.c  triangle.c
Home Work 10/: pali.c  pochti.c  s_two_i.c  splits.c  trims.c
Home Work 11/: inp.txt  lab3.c  main.c
Home Work 2/: calculator.c  year.c
Home Work 3/: Lucky tickets.c  simple.c  triangle.c
Home Work 3/Function)/: count diisors.c  gcd.c  simple upgrate.c
Home Work 3/cycles/: PacMan.c  fizz buzz.c  prime numbers.c
Home Work 4/pointers/: adress variable.c  evil.c
Home Work 5/: swap.c
Home Work 6/: arrays.c
