cmake_minimum_required(VERSION 3.26)
project(Home_Works_C C)

set(CMAKE_C_STANDARD 11)

add_executable(Home_Works_C
        "Home Work 1/fizz buzz.c"
        "Home Work 1/square.c"
        "Home Work 1/triangle.c"
        "Home Work 1/simple.c"
        "Home Work 1/prime numbers.c"
        "Home Work 1/Lucky tickets.c"
        "Home Work 1/PacMan.c")
